--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.16.13/antd.min.css"
+  integrity="sha512-EXAMPLE_HASH"
+  crossorigin="anonymous"
+/> -->
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
